--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ html {
   min-width: 520px;
   background-color: rgba(225, 225, 225, .9);
   margin: 50px;
+  position: relative;
 }
 
 .box-title {
@@ -116,6 +117,7 @@ h5 {
   text-align: center;
   font-size: 40px;
   font-weight: 900;
+  width: 380px;
 }
 
 .meal {
@@ -125,14 +127,27 @@ h5 {
   text-align: center;
   font-weight: 900;
   font-size: 30px;
+  width: 380px;
 }
 
 #cookpot {
   max-height: 150px;
 }
 
+#clear-button {
+  background-color: #95a5a6;
+  font-size: 15px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  position: absolute;
+  top: 90%;
+  left: 81%;
+}
 /* Other Styling */
 
 .hidden {
-  display: none;
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
 }
