--- a/styles.css
+++ b/styles.css
@@ -141,8 +141,9 @@ h5 {
   border: none;
   border-radius: 5px;
   position: absolute;
-  top: 90%;
-  left: 81%;
+  padding: 10px 17px;
+  top: 85%;
+  left: 80%;
 }
 /* Other Styling */
 
