Add footer appearing after clicking 'add a recipe' in the nav bar

--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,9 @@ form > button {
   top: -9999px !important;
   left: -9999px !important;
 }
+
+.hidden-footer {
+  position: absolute !important;
+  top: -9999px !important;
+  left: -9999px !important;
+}
