Add 'find recipes' button that provides search results for the given individual random food

--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,18 @@ h5 {
   max-height: 150px;
 }
 
+#find-recipes-button {
+  background-color: cornflowerblue;
+  font-size: 15px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  position: absolute;
+  padding: 10px 17px;
+  top: 85%;
+  left: 5%;
+}
+
 #clear-button {
   background-color: #95a5a6;
   font-size: 15px;
