--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ button, input {
   transition: all .2s ease-in-out;
 }
 
-input:hover {
+.radio:hover {
   transform: scale(1.5);
 }
 
@@ -74,7 +74,7 @@ html {
   background-color: rgba(225, 225, 225, .9);
   margin: 50px;
   position: fixed;
-  top: 115px;
+  top: 100px;
 }
 
 .box-title {
@@ -276,6 +276,10 @@ form > button {
 
 
 /* Other Styling */
+
+.input-required {
+  background-color: red;
+}
 
 .ready {
   background-color: #3AB9B2;
