fix bug allowing duplicates being added to data array, refactor code

--- a/styles.css
+++ b/styles.css
@@ -368,6 +368,6 @@ form > button {
 
 .hidden-footer {
   position: absolute !important;
-  top: -9999px !important;
+  bottom: -9999px !important;
   left: -9999px !important;
 }
